# axum-cms

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deploy.sh
.cargo/: config.toml
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  error.rs  main.rs  routes.rs  utils.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/flows/: backend.dio  controllers.dio  routes.dio  tables.dio
src/handlers/: auth.rs  author.rs  edit_suggestion.rs  hello.rs  mod.rs  post.rs
src/log/: mod.rs
src/middlewares/: auth.rs  cache.rs  mod.rs
src/models/: auth.rs  author.rs  base.rs  custom_response.rs  edit.rs  edit_suggestion.rs  error.rs  mod.rs  post.rs  state.rs
src/models/store/: error.rs  mod.rs
src/utils/: auth.rs  cache.rs  custom_extractor.rs  error.rs  mod.rs
src/web/: auth.rs  custom_extractor.rs  custom_response.rs  error.rs  mod.rs  routes.rs  routes_login.rs
src/web/handlers/: auth.rs  author.rs  edit.rs  edit_suggestion.rs  hello.rs  mod.rs  post.rs  routes_static.rs
src/web/middlewares/: auth.rs  cache.rs  mod.rs  res_map.rs
src/web/routes/: mod.rs
web-folder/: index.html
