[package]
name = "actix-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = {version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9.0"
axum = {version = "0.6.20", features = ["macros"]}
anyhow = "1"
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
chrono = "0.4.31"