[package]
name = "axum-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
# -- Web
axum = {version = "0.6.20", features = ["macros"]}
axum-extra = "0.8.0"
tower-http = {version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9.0"
# -- Tracing
tracing="0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
# -- Others
jsonwebtoken = "8.0"
once_cell = "1.8"
anyhow = "1"
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
chrono = "0.4.31"
bcrypt = "0.15.0"
redis = { version = "0.23.3", features = ["tokio-rustls-comp"] }
thiserror = "1.0.49"
