[package]
name = "axum-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = {version = "3", features = ["time_0_3"]}
# -- Web
axum = {version = "0.6.20", features = ["macros"]}
axum-extra = "0.8.0"
tower-http = {version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9.0"
# -- Tracing
tracing="0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
# -- Data
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
sea-query = "0.30.7"
sea-query-binder = {version = "0.5", features = ["sqlx-postgres", "with-uuid", "with-time"]}
modql = {version = "0.3", features = ["with-sea-query"]}
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
# -- Others
jsonwebtoken = "8.0"
once_cell = "1.8"
anyhow = "1"
dotenv = "0.15.0"
chrono = "0.4.31"
bcrypt = "0.15.0"
redis = { version = "0.23.3", features = ["tokio-rustls-comp"] }
thiserror = "1.0.49"
difference = "2.0"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = {version = "1", features = ["v4", "fast-rng"]}
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "3"
